# midnightbsd-space-game

./: Allenroids.cpp  Allenroids.h  Asteroid.cpp  Asteroid.h  BadGuy.cpp  BadGuy.h  CMakeLists.txt  ConfigureScreen.cpp  ConfigureScreen.h  Crystal.cpp  Crystal.h  GameObject.cpp  GameObject.h  Iterator.h  Kerblooie.cpp  Kerblooie.h  LinkedList.h  Makefile  Node.h  Player.cpp  Player.h  README.md  Shot.cpp  Shot.h  Spaceship.cpp  Spaceship.h  StandardElements.cpp  StandardElements.h  Starfield.cpp  Starfield.h  TitleScreen.cpp  TitleScreen.h  sound.cpp  sound.h
.github/workflows/: codeql-analysis.yml
